--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
   <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="Курсы Hexlet" />
+    <meta property="og:description" content="Курсы по программированию и веб-разработке. Видео, практика и реальные проекты." />
+    <meta property="og:image" content="https://something.io/cover.jpeg" />
     <link rel="stylesheet" type="text/css" href="index.css">
     <title>Резюме Алексей Примадонин</title>
   </head>
